update JOL usage