@@ -77,6 +77,15 @@
                     <target>${maven.compiler.target}</target>
                 </configuration>
             </plugin>
+
+<!--            <plugin>-->
+<!--                <groupId>org.apache.maven.plugins</groupId>-->
+<!--                <artifactId>maven-surefire-plugin</artifactId>-->
+<!--                <version>3.2.5</version>-->
+<!--                <configuration>-->
+<!--                    <argLine>-Djdk.attach.allowAttachSelf=true</argLine>-->
+<!--                </configuration>-->
+<!--            </plugin>-->
         </plugins>
 
     </build>
